packages/platform/nros-platform-api/include/nros/platform.h

/** Operation completed successfully. */
#define NROS_PLATFORM_RET_OK              0
/** Bytes currently allocated from the platform heap, or `0` if the port
 *  does not instrument it. Phase 230 / RFC-0034 D7: the true unified figure
 *  where the platform owns one kernel heap shared by the C side and the
 *  Rust `#[global_allocator]`. */
size_t nros_platform_heap_used_bytes(void);
/** Smallest number of bytes ever left unused on the CALLING task's stack, or
 *  `0` if this port cannot report it.
 *
 *  HEADROOM, not usage, because that is what both kernels natively track and
 *  it is the number a safety argument needs: how close the worst observed
 *  excursion came to the end of the stack.
 *
 *  The heap has had `nros_platform_heap_used_bytes` since RFC-0034 D7; the
 *  stack had nothing, and stack overflow is the classic way one component
 *  corrupts another's state. ISO 26262 treats spatial freedom from
 *  interference as a first-class requirement and AUTOSAR pairs memory
 *  protection with stack monitoring for exactly this reason. Without a
 *  portable probe the only recourse is a per-RTOS one: this repo's Zephyr
 *  lane greps `thread_analyzer` printk output in CI, which is a text scrape
 *  of a debug facility standing in for a platform capability, and reports
 *  nothing on any other port.
 *
 *  SELF only, deliberately. Both kernels answer for the calling task with no
 *  handle (`uxTaskGetStackHighWaterMark(NULL)`, `k_thread_stack_space_get`
 *  with `k_current_get()`), whereas answering for an arbitrary task needs a
 *  native handle this ABI does not carry -- on Zephyr the task storage is a
 *  `pthread_t` and the mapping to `k_thread *` is not public. A task
 *  reporting its own headroom is also the shape the callers want: each tier
 *  says how much of its own stack it has ever needed.
 *
 *  `0` means "this port does not instrument it", matching
 *  `nros_platform_heap_used_bytes`. It is not a claim that the stack is
 *  full. */
size_t nros_platform_task_stack_unused_bytes(void);
/** Total managed heap size in bytes (used + free), or `0` if unknown. */
size_t nros_platform_heap_total_bytes(void);
/* ---- Sleep ---- */

/** Sleep at least `us` microseconds. Spin if the platform clock has no
 *  sub-millisecond timer. */
void nros_platform_sleep_us(size_t us);
/** Sleep at least `ms` milliseconds. */
void nros_platform_sleep_ms(size_t ms);
/** Sleep at least `s` seconds. */
void nros_platform_sleep_s(size_t s);
/* ---- Cooperative yield ---- */

/** Voluntarily yield the current task / thread. On bare-metal,
 *  `core::hint::spin_loop()` is acceptable; on RTOSes use the native
 *  cooperative-yield primitive (`k_yield`, `vPortYield`,
 *  `tx_thread_relinquish`, `sched_yield`, …). RTOS yields are **not**
 *  ISR-safe. */
void nros_platform_yield_now(void);
/* ---- Random ---- */

/** Random `u8`. Cryptographically random where the platform has an
 *  entropy source; otherwise a seeded PRNG. Must be deterministic
 *  within a single test session for reproducibility. */
uint8_t  nros_platform_random_u8(void);
/** Random `u16`. See `random_u8` notes. */
uint16_t nros_platform_random_u16(void);
/** Random `u32`. See `random_u8` notes. */
uint32_t nros_platform_random_u32(void);
/** Random `u64`. See `random_u8` notes. */
uint64_t nros_platform_random_u64(void);
/** Fill `len` bytes at `buf` with random data. */
void     nros_platform_random_fill(void *buf, size_t len);
/* ---- Wall clock ---- */

/** Wall-clock nanoseconds since the Unix epoch, or `0` if the platform has
 *  no real-time clock.
 *
 *  ONE symbol for one fact, mirroring what RFC-0073 / phase-352 did for the
 *  monotonic clock. It replaced `time_now_ms` + `time_since_epoch_secs` +
 *  `time_since_epoch_nanos` (issue 0532 item 5).
 *
 *  Why the split had to go, beyond tidiness: the ABI spent ONE INSTANT over
 *  two symbols, and each call sampled the clock separately (the POSIX port
 *  issued its own `clock_gettime` in each). A second boundary landing between
 *  the two reads paired the OLD second with the NEW sub-second remainder — a
 *  timestamp that jumped a full second BACKWARDS, rarely and silently. Both
 *  `nros-core` and `nros-node` carried a bounded re-read loop to paper over
 *  it; a single read cannot tear, so those loops are gone.
 *
 *  `u64` ns spans ~584 years from 1970, so it also retires the `uint32_t`
 *  seconds field, which overflowed in 2106.
 *
 *  Ports convert from whatever they have — a port with only seconds returns
 *  `secs * 1000000000ULL`, and one with no RTC returns 0. Callers wanting
 *  milliseconds divide by 1000000; wanting a `(secs, nanos)` pair, divide and
 *  remainder by 1000000000. */
uint64_t nros_platform_time_now_ns(void);
/* Issue 0532 item 5 — `nros_platform_time_now_ms`,
 * `nros_platform_time_since_epoch_secs` and
 * `nros_platform_time_since_epoch_nanos` are RETIRED, the same way
 * phase-352 W6 retired `clock_ms` / `clock_us` rather than keeping
 * wrappers. A caller that hand-declares any of the three is caught by
 * `scripts/check-retired-platform-clock-symbols.py`. */

/* ---- Threading: tasks ---- */

/* ---- Task attributes ----
 *
 * phase-364 W3 (RFC-0076 D2). `attr` used to be an undefined `void *`: IGNORED
 * by the posix and zephyr ports, a PRIVATE struct in the freertos and esp-idf
 * ports, and MANDATORY on threadx (a `NULL` was a hard failure). Three struct
 * types, no shared definition, and therefore no portable way to ask for a stack
 * size — which is why phase-359 W7 wrote a bespoke C shim to spawn a NuttX tier
 * with a 64 KiB stack, and why W10's generic spawn passes `NULL` and would fail
 * on ThreadX.
 *
 * One type now, defined here, and `attr == NULL` means "every default" on
 * EVERY port. */
typedef struct {
    /** Task name for the kernel's own tables and crash dumps. `NULL` = the
     *  port's default. Ports whose kernel has no name concept ignore it. */
    const char *name;
    /** Minimum stack size in BYTES. `0` = the port's default.
     *
     *  A FLOOR, not an exact size (issue 0612). Every port has a minimum of its
     *  own — `PTHREAD_STACK_MIN`, `configMINIMAL_STACK_SIZE`, `TX_MINIMUM_STACK`
     *  — and those differ by an order of magnitude, and on POSIX differ by
     *  ARCHITECTURE (16384 on glibc/x86_64, 131072 on glibc/aarch64). So no
     *  portable caller can name a number that is legal everywhere, and a port
     *  that treats a small request as an error turns a reasonable ask into a
     *  dead capability: that is exactly how `Executor::signal_fd()` returned
     *  `NotInitialized` on every Linux host. A port raises this to its own
     *  minimum; it never lowers it, and never refuses for being too small.
     *
     *  Always bytes, never words: FreeRTOS's `xTaskCreate` takes words, and the
     *  private struct it replaced called the field `stack_depth` while ThreadX's
     *  identically-named field was bytes. The conversion belongs in the one port
     *  that needs it, not in every caller. */
    size_t stack_bytes;
    /** Caller-provided stack memory, or `NULL` to let the port obtain it.
     *
     *  ThreadX requires the stack from its caller; POSIX, FreeRTOS and ESP-IDF
     *  let the kernel allocate and ignore this. A port that needs memory and is
     *  given `NULL` obtains it itself and releases it in `task_free`. */
    void *stack_mem;
    /** Scheduling priority in the NORMALISED band: `0` = least urgent, larger
     *  = more urgent, `NROS_PLATFORM_PRIORITY_INHERIT` = keep the creating
     *  task's.
     *
     *  phase-364 W5. This was "platform-native", and the natives disagree: `0`
     *  is the HIGHEST priority on ThreadX and the LOWEST on FreeRTOS, while
     *  Zephyr runs lower-is-more-urgent with negatives reserved for cooperative
     *  threads. A tier priority is authored ONCE, in `system.toml`, and
     *  deployed to several of them — so the same number meant "run me first" on
     *  one board and "run me last" on another, with nothing in the ABI
     *  recording which convention a port used.
     *
     *  Each port maps this band onto its own range and documents the map at its
     *  `task_init`. Use `NROS_PLATFORM_PRIORITY_RAW(n)` to bypass the band when
     *  tuning one RTOS against its own documentation — that is a legitimate
     *  thing to do, and the band should not make it impossible. */
    int32_t priority;
    /** SMP core to pin to, or `-1` for unpinned. Ignored on single-core. */
    int8_t core;
    /** `NROS_PLATFORM_TASK_*` flags below. */
    uint8_t flags;
} nros_platform_task_attr_t;
/** Fill `attr` with the defaults — equivalent to passing `NULL` to
 *  `task_init`.
 *
 *  Callers use this rather than a designated initialiser so that a field added
 *  to the struct later stays source-compatible for out-of-tree ports. */
void nros_platform_task_attr_init(nros_platform_task_attr_t *attr);
/** Spawn a new task. `task` is opaque caller-provided storage (size from
 *  `nros_platform_task_storage_size`); `attr` is a
 *  `nros_platform_task_attr_t *`, or `NULL` for every default; `entry` is the
 *  task entry point; `arg` is forwarded to `entry`.
 *
 *  Returns `NROS_PLATFORM_RET_OK`, or `INVALID` (a NULL where storage or an
 *  entry is required), `NOMEM` (resources exhausted now — retry may succeed) or
 *  `UNSUPPORTED` (this port has no tasks at all). */
int8_t nros_platform_task_init(void *task, void *attr,
                               void *(*entry)(void *), void *arg);
/** Block until `task` exits. Cleans up task storage on success. */
int8_t nros_platform_task_join(void *task);
/** Mark `task` as detached — its storage is reclaimed on exit without
 *  a join. */
int8_t nros_platform_task_detach(void *task);
/** Request `task` to terminate at the next cancellation point.
 *  Cooperative: a task that never reaches a cancel point will not stop. */
int8_t nros_platform_task_cancel(void *task);
/** Terminate the calling task immediately. Does not return. */
void nros_platform_task_exit(void);
/** Free task storage allocated by `task_init`. Called after `task_join`
 *  or `task_detach + exit`. */
void nros_platform_task_free(void **task);
/** Opaque-storage sizing for `task`, mirroring the wake primitive's
 *  probes below. Both are pure functions (no global state) and may be
 *  called before `nros_platform_task_init`.
 *
 *  phase-359 W10 — added because `task_init`'s "size determined by the
 *  implementor" had no way to ASK. A C caller can write
 *  `pthread_t t;` and pass `&t`; a Rust caller cannot, and hard-coding
 *  a size is precisely issue 0570 (Rust's 20-byte `pthread_attr_t` met
 *  NuttX's 56-byte one and smashed the caller's frame). The wake
 *  primitive already solved this the right way; tasks now match it. */
size_t nros_platform_task_storage_size(void);
size_t nros_platform_task_storage_align(void);
/** Opaque-storage sizing for the lock family, matching `wake` and `task`.
 *  Pure functions, callable before the corresponding `_init`. */
size_t nros_platform_mutex_storage_size(void);
size_t nros_platform_mutex_storage_align(void);
size_t nros_platform_mutex_rec_storage_size(void);
size_t nros_platform_mutex_rec_storage_align(void);
size_t nros_platform_condvar_storage_size(void);
size_t nros_platform_condvar_storage_align(void);
/* ---- Threading: non-recursive mutex ---- */

int8_t nros_platform_mutex_init(void *m);
int8_t nros_platform_mutex_drop(void *m);
int8_t nros_platform_mutex_lock(void *m);
int8_t nros_platform_mutex_try_lock(void *m);
int8_t nros_platform_mutex_unlock(void *m);
/* ---- Threading: recursive mutex ---- */

/** Initialise a recursive mutex (same-thread re-entry permitted).
 *  Required by zenoh-pico. */
int8_t nros_platform_mutex_rec_init(void *m);
int8_t nros_platform_mutex_rec_drop(void *m);
int8_t nros_platform_mutex_rec_lock(void *m);
int8_t nros_platform_mutex_rec_try_lock(void *m);
int8_t nros_platform_mutex_rec_unlock(void *m);
/* ---- Threading: condition variables ---- */

int8_t nros_platform_condvar_init(void *cv);
int8_t nros_platform_condvar_drop(void *cv);
int8_t nros_platform_condvar_signal(void *cv);
int8_t nros_platform_condvar_signal_all(void *cv);
/** Phase 124.B.7.a — ISR-safe signal.
 *
 *  Callable from interrupt context. `nros_platform_condvar_signal`
 *  is NOT ISR-safe on every platform (POSIX `pthread_cond_signal`
 *  isn't on the async-signal-safe function list; RTOS condvar
 *  primitives often require thread context). Backends MUST use
 *  this variant when triggering from an ISR or POSIX signal handler.
 *
 *  Per-platform implementation:
 *  * POSIX: `pipe` write — async-signal-safe; a runtime worker thread
 *    forwards to the underlying condvar. (Linux may use `eventfd`
 *    instead, which is NOT POSIX — `signalfd`/`eventfd` are Linux
 *    syscalls, which is why `nros-node`'s worker is
 *    `target_os = "linux"`-gated.)
 *  * Zephyr: `k_sem_give` on the wake semaphore (ISR-safe).
 *  * FreeRTOS: `xSemaphoreGiveFromISR` + `portYIELD_FROM_ISR` on
 *    the wake semaphore.
 *  * NuttX: `sem_post` (POSIX-safe under NuttX) on the wake sem.
 *  * ThreadX: `tx_event_flags_set` on the wake event flag group
 *    (ISR-safe).
 *  * Bare-metal: atomic flag store + `__SEV()` (Cortex-M).
 *
 *  Returns non-zero on error (e.g. ISR-unsafe call on a backend
 *  that mandates ISR-context-only via a separate primitive).
 *  Backends without an ISR-safe path return non-zero so callers
 *  can fall back to thread-context signal (with the obvious
 *  latency cost). */
int8_t nros_platform_condvar_signal_from_isr(void *cv);
/** Atomically release `m` and block on `cv`. The mutex is re-acquired
 *  before this function returns.
 *
 *  **NOT REAL-TIME — this wait is UNBOUNDED.** Every port implements it with
 *  its forever spelling (`TX_WAIT_FOREVER`, `portMAX_DELAY`, `K_FOREVER`), so
 *  a caller that blocks here has no deadline and no way to be woken by one.
 *  Nothing on the executor path calls it, and nothing new should: the
 *  executor's own wait uses the BOUNDED `nros_platform_wake_wait_ms`, and a
 *  condvar caller that needs a bound has `condvar_wait_until` directly below.
 *
 *  Kept rather than deleted because removing an exported symbol breaks
 *  out-of-tree ports, and marked here rather than left neutral because
 *  `condvar_wait` is the OBVIOUS spelling — the next port reaches for it and
 *  loses the bound silently. `scripts/check-no-unbounded-condvar-wait.sh`
 *  enforces the "nothing new" half; see issue 1196 and phase-436 W5.
 *
 *  "No unbounded wait" is only a property of the system if it is a property of
 *  the API. */
int8_t nros_platform_condvar_wait(void *cv, void *m);