packages/platform/nros-platform-cffi/src/generated.rs

unsafe extern "C" {
    #[doc = " Smallest number of bytes ever left unused on the CALLING task's stack, or\n  `0` if this port cannot report it.\n\n  HEADROOM, not usage, because that is what both kernels natively track and\n  it is the number a safety argument needs: how close the worst observed\n  excursion came to the end of the stack.\n\n  The heap has had `nros_platform_heap_used_bytes` since RFC-0034 D7; the\n  stack had nothing, and stack overflow is the classic way one component\n  corrupts another's state. ISO 26262 treats spatial freedom from\n  interference as a first-class requirement and AUTOSAR pairs memory\n  protection with stack monitoring for exactly this reason. Without a\n  portable probe the only recourse is a per-RTOS one: this repo's Zephyr\n  lane greps `thread_analyzer` printk output in CI, which is a text scrape\n  of a debug facility standing in for a platform capability, and reports\n  nothing on any other port.\n\n  SELF only, deliberately. Both kernels answer for the calling task with no\n  handle (`uxTaskGetStackHighWaterMark(NULL)`, `k_thread_stack_space_get`\n  with `k_current_get()`), whereas answering for an arbitrary task needs a\n  native handle this ABI does not carry -- on Zephyr the task storage is a\n  `pthread_t` and the mapping to `k_thread *` is not public. A task\n  reporting its own headroom is also the shape the callers want: each tier\n  says how much of its own stack it has ever needed.\n\n  `0` means \"this port does not instrument it\", matching\n  `nros_platform_heap_used_bytes`. It is not a claim that the stack is\n  full."]
    pub fn nros_platform_task_stack_unused_bytes() -> usize;
}
unsafe extern "C" {
    #[doc = " Total managed heap size in bytes (used + free), or `0` if unknown."]
    pub fn nros_platform_heap_total_bytes() -> usize;
}
unsafe extern "C" {
    #[doc = " Sleep at least `us` microseconds. Spin if the platform clock has no\n  sub-millisecond timer."]
    pub fn nros_platform_sleep_us(us: usize);
}
unsafe extern "C" {
    #[doc = " Sleep at least `ms` milliseconds."]
    pub fn nros_platform_sleep_ms(ms: usize);
}
unsafe extern "C" {
    #[doc = " Sleep at least `s` seconds."]
    pub fn nros_platform_sleep_s(s: usize);
}
unsafe extern "C" {
    #[doc = " Voluntarily yield the current task / thread. On bare-metal,\n  `core::hint::spin_loop()` is acceptable; on RTOSes use the native\n  cooperative-yield primitive (`k_yield`, `vPortYield`,\n  `tx_thread_relinquish`, `sched_yield`, …). RTOS yields are **not**\n  ISR-safe."]
    pub fn nros_platform_yield_now();
}
unsafe extern "C" {
    #[doc = " Random `u8`. Cryptographically random where the platform has an\n  entropy source; otherwise a seeded PRNG. Must be deterministic\n  within a single test session for reproducibility."]
    pub fn nros_platform_random_u8() -> u8;
}
unsafe extern "C" {
    #[doc = " Random `u16`. See `random_u8` notes."]
    pub fn nros_platform_random_u16() -> u16;
}
unsafe extern "C" {
    #[doc = " Random `u32`. See `random_u8` notes."]
    pub fn nros_platform_random_u32() -> u32;
}
unsafe extern "C" {
    #[doc = " Random `u64`. See `random_u8` notes."]
    pub fn nros_platform_random_u64() -> u64;
}
unsafe extern "C" {
    #[doc = " Fill `len` bytes at `buf` with random data."]
    pub fn nros_platform_random_fill(buf: *mut core::ffi::c_void, len: usize);
}
unsafe extern "C" {
    #[doc = " Wall-clock nanoseconds since the Unix epoch, or `0` if the platform has\n  no real-time clock.\n\n  ONE symbol for one fact, mirroring what RFC-0073 / phase-352 did for the\n  monotonic clock. It replaced `time_now_ms` + `time_since_epoch_secs` +\n  `time_since_epoch_nanos` (issue 0532 item 5).\n\n  Why the split had to go, beyond tidiness: the ABI spent ONE INSTANT over\n  two symbols, and each call sampled the clock separately (the POSIX port\n  issued its own `clock_gettime` in each). A second boundary landing between\n  the two reads paired the OLD second with the NEW sub-second remainder — a\n  timestamp that jumped a full second BACKWARDS, rarely and silently. Both\n  `nros-core` and `nros-node` carried a bounded re-read loop to paper over\n  it; a single read cannot tear, so those loops are gone.\n\n  `u64` ns spans ~584 years from 1970, so it also retires the `uint32_t`\n  seconds field, which overflowed in 2106.\n\n  Ports convert from whatever they have — a port with only seconds returns\n  `secs * 1000000000ULL`, and one with no RTC returns 0. Callers wanting\n  milliseconds divide by 1000000; wanting a `(secs, nanos)` pair, divide and\n  remainder by 1000000000."]
    pub fn nros_platform_time_now_ns() -> u64;
}
unsafe extern "C" {
    #[doc = " Fill `attr` with the defaults — equivalent to passing `NULL` to\n  `task_init`.\n\n  Callers use this rather than a designated initialiser so that a field added\n  to the struct later stays source-compatible for out-of-tree ports."]
    pub fn nros_platform_task_attr_init(attr: *mut nros_platform_task_attr_t);
}
unsafe extern "C" {
    #[doc = " Spawn a new task. `task` is opaque caller-provided storage (size from\n  `nros_platform_task_storage_size`); `attr` is a\n  `nros_platform_task_attr_t *`, or `NULL` for every default; `entry` is the\n  task entry point; `arg` is forwarded to `entry`.\n\n  Returns `NROS_PLATFORM_RET_OK`, or `INVALID` (a NULL where storage or an\n  entry is required), `NOMEM` (resources exhausted now — retry may succeed) or\n  `UNSUPPORTED` (this port has no tasks at all)."]
    pub fn nros_platform_task_init(
        task: *mut core::ffi::c_void,
        attr: *mut core::ffi::c_void,
        entry: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> *mut core::ffi::c_void,
        >,
        arg: *mut core::ffi::c_void,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Block until `task` exits. Cleans up task storage on success."]
    pub fn nros_platform_task_join(task: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Mark `task` as detached — its storage is reclaimed on exit without\n  a join."]
    pub fn nros_platform_task_detach(task: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Request `task` to terminate at the next cancellation point.\n  Cooperative: a task that never reaches a cancel point will not stop."]
    pub fn nros_platform_task_cancel(task: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Terminate the calling task immediately. Does not return."]
    pub fn nros_platform_task_exit();
}
unsafe extern "C" {
    #[doc = " Free task storage allocated by `task_init`. Called after `task_join`\n  or `task_detach + exit`."]
    pub fn nros_platform_task_free(task: *mut *mut core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Opaque-storage sizing for `task`, mirroring the wake primitive's\n  probes below. Both are pure functions (no global state) and may be\n  called before `nros_platform_task_init`.\n\n  phase-359 W10 — added because `task_init`'s \"size determined by the\n  implementor\" had no way to ASK. A C caller can write\n  `pthread_t t;` and pass `&t`; a Rust caller cannot, and hard-coding\n  a size is precisely issue 0570 (Rust's 20-byte `pthread_attr_t` met\n  NuttX's 56-byte one and smashed the caller's frame). The wake\n  primitive already solved this the right way; tasks now match it."]
    pub fn nros_platform_task_storage_size() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_task_storage_align() -> usize;
}
unsafe extern "C" {
    #[doc = " Opaque-storage sizing for the lock family, matching `wake` and `task`.\n  Pure functions, callable before the corresponding `_init`."]
    pub fn nros_platform_mutex_storage_size() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_storage_align() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_storage_size() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_storage_align() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_storage_size() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_storage_align() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_init(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_drop(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_try_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_unlock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Initialise a recursive mutex (same-thread re-entry permitted).\n  Required by zenoh-pico."]
    pub fn nros_platform_mutex_rec_init(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_drop(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_try_lock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_mutex_rec_unlock(m: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_init(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_drop(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_signal(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_condvar_signal_all(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Phase 124.B.7.a — ISR-safe signal.\n\n  Callable from interrupt context. `nros_platform_condvar_signal`\n  is NOT ISR-safe on every platform (POSIX `pthread_cond_signal`\n  isn't on the async-signal-safe function list; RTOS condvar\n  primitives often require thread context). Backends MUST use\n  this variant when triggering from an ISR or POSIX signal handler.\n\n  Per-platform implementation:\n  * POSIX: `pipe` write — async-signal-safe; a runtime worker thread\n    forwards to the underlying condvar. (Linux may use `eventfd`\n    instead, which is NOT POSIX — `signalfd`/`eventfd` are Linux\n    syscalls, which is why `nros-node`'s worker is\n    `target_os = \"linux\"`-gated.)\n  * Zephyr: `k_sem_give` on the wake semaphore (ISR-safe).\n  * FreeRTOS: `xSemaphoreGiveFromISR` + `portYIELD_FROM_ISR` on\n    the wake semaphore.\n  * NuttX: `sem_post` (POSIX-safe under NuttX) on the wake sem.\n  * ThreadX: `tx_event_flags_set` on the wake event flag group\n    (ISR-safe).\n  * Bare-metal: atomic flag store + `__SEV()` (Cortex-M).\n\n  Returns non-zero on error (e.g. ISR-unsafe call on a backend\n  that mandates ISR-context-only via a separate primitive).\n  Backends without an ISR-safe path return non-zero so callers\n  can fall back to thread-context signal (with the obvious\n  latency cost)."]
    pub fn nros_platform_condvar_signal_from_isr(cv: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Atomically release `m` and block on `cv`. The mutex is re-acquired\n  before this function returns."]
    pub fn nros_platform_condvar_wait(cv: *mut core::ffi::c_void, m: *mut core::ffi::c_void) -> i8;
}
